BookRent/k8s/sql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-sql
  labels:
    app: catalog-sql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-sql
  template:
    metadata:
      labels:
        app: catalog-sql
    spec:
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: mssqldata
              mountPath: /var/opt/mssql
      volumes:
        - name: mssqldata
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-sql
spec:
  selector:
    app: catalog-sql
  ports:
    - port: 1433
      targetPort: 1433
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: renting-sql
  labels:
    app: renting-sql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: renting-sql
  template:
    metadata:
      labels:
        app: renting-sql
    spec:
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: mssqldata
              mountPath: /var/opt/mssql
      volumes:
        - name: mssqldata
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: renting-sql
spec:
  selector:
    app: renting-sql
  ports:
    - port: 1433
      targetPort: 1433
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-sql
  labels:
    app: user-sql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-sql
  template:
    metadata:
      labels:
        app: user-sql
    spec:
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: mssqldata
              mountPath: /var/opt/mssql
      volumes:
        - name: mssqldata
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: user-sql
spec:
  selector:
    app: user-sql
  ports:
    - port: 1433
      targetPort: 1433
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-sql
  labels:
    app: identity-sql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-sql
  template:
    metadata:
      labels:
        app: identity-sql
    spec:
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: mssqldata
              mountPath: /var/opt/mssql
      volumes:
        - name: mssqldata
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: identity-sql
spec:
  selector:
    app: identity-sql
  ports:
    - port: 1433
      targetPort: 1433
